added authentication and sessions
